--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -17,5 +17,5 @@ log4j.category.DataNucleus.Datastore=WARN, A1
 log4j.category.DataNucleus.ClassLoading=WARN, A1
 log4j.category.DataNucleus.Plugin=WARN, A1
 log4j.category.DataNucleus.ValueGeneration=WARN, A1
-log4j.category.DataNucleus.Enhancer=WARN, A1
+log4j.category.DataNucleus.Enhancer=INFO, A1
 log4j.category.DataNucleus.SchemaTool=WARN, A1
